--- a/src/View/PaymentWindow.fxml
+++ b/src/View/PaymentWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -7,21 +8,21 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.PaymentWindow">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="Controller.PaymentWindowController">
    <children>
       <VBox layoutX="-1.0" prefHeight="400.0" prefWidth="600.0">
          <children>
-            <Label alignment="CENTER" prefHeight="60.0" prefWidth="600.0" text="Payment with VISA:">
+            <Label alignment="CENTER" prefHeight="60.0" prefWidth="600.0" text="Payment with VISA :">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <GridPane>
+            <GridPane prefHeight="80.0" prefWidth="600.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="134.39996337890625" minWidth="10.0" prefWidth="125.4" />
@@ -37,26 +38,38 @@
                <children>
                   <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="34.0" prefWidth="106.0" text="First name:" />
                   <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="36.0" prefWidth="106.0" text="Card number:" GridPane.rowIndex="1" />
-                  <TextField maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="145.0" GridPane.columnIndex="1" />
-                  <TextField maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="34.0" prefWidth="145.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="34.0" prefWidth="137.0" text="3 numbers:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <TextField maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="30.0" prefWidth="98.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                  <TextField fx:id="firstNamePayment" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="145.0" GridPane.columnIndex="1" />
+                  <TextField fx:id="cardNumberPayment" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="34.0" prefWidth="145.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="34.0" prefWidth="137.0" text="CVV:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <TextField fx:id="cvvPayment" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="30.0" prefWidth="98.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                   <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="34.0" prefWidth="59.0" text="Date:" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-                  <DatePicker maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="26.0" prefWidth="145.0" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+                  <DatePicker fx:id="datePayment" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="26.0" prefWidth="145.0" GridPane.columnIndex="5" GridPane.rowIndex="1" />
                   <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="34.0" prefWidth="142.0" text="Last Name:" GridPane.columnIndex="2" />
-                  <TextField maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" />
-                  <TextField maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="5" />
+                  <TextField fx:id="lastNamePayment" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" />
+                  <TextField fx:id="idPayment" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="5" />
                   <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="34.0" prefWidth="62.0" text="ID:" GridPane.columnIndex="4" />
                </children>
             </GridPane>
-            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="38.0" prefWidth="600.0" text="Pay" />
-            <AnchorPane prefHeight="90.0" prefWidth="600.0" />
-            <Label alignment="CENTER" prefHeight="60.0" prefWidth="600.0" text="Payment with PAYPAL:">
+            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#payVisaPayment" prefHeight="50.0" prefWidth="600.0" text="Pay" />
+            <HBox prefHeight="56.0" prefWidth="554.0">
+               <children>
+                  <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="51.0" prefWidth="483.0" text="Fill &amp; Pay with one of the option or press &quot;cancel&quot; to go back" />
+                  <Button alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#cancelPayment" prefHeight="36.0" prefWidth="130.0" text="Cancel" textAlignment="CENTER">
+                     <HBox.margin>
+                        <Insets top="5.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </HBox>
+            <Label alignment="CENTER" prefHeight="60.0" prefWidth="600.0" text="Payment with PAYPAL :">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <GridPane>
+            <GridPane prefHeight="80.0" prefWidth="600.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.20001220703125" minWidth="10.0" prefWidth="170.40003967285156" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="429.59996032714844" minWidth="10.0" prefWidth="429.59996032714844" />
@@ -68,11 +81,11 @@
                <children>
                   <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Email:" />
                   <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Password:" GridPane.rowIndex="1" />
-                  <TextField maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" />
-                  <TextField maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="emailPayment" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" />
+                  <TextField fx:id="passwordPayment" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
-            <Button layoutX="10.0" layoutY="131.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="38.0" prefWidth="600.0" text="Pay" />
+            <Button layoutX="10.0" layoutY="131.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#payPaypalPayment" prefHeight="50.0" prefWidth="600.0" text="Pay" />
          </children>
       </VBox>
    </children>
